# ski-framework

./: .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  LICENSE-docs.md  LICENSE.md  MAINTAINERS.md  NOTICE  README.md  RELEASING.md  ROADMAP.md  SECURITY.md  SUPPORT.md  TEST_REPORT_v0.2.0.md  THREAT_MODEL.md  TRADEMARKS.md  conftest.py  mkdocs.yml  pyproject.toml  pytest.ini  quickstart.py  release-notes-v3.0.0.md  release-notes-v3.0.1.md  release-notes-v3.0.2.md  requirements-dev.txt  requirements-docs.txt  restore-git.ps1  social_drafts_2026-06-23.md
.devcontainer/: devcontainer.json  post-create.sh
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  spec_change.yml
.github/workflows/: ci.yml  docs.yml  evals.yml  release.yml  security.yml
benchmarks/: __init__.py  report.py  run.py  runner.py  stats.py
benchmarks/tests/: test_benchmarks_harness.py
conformance/: CHANGELOG.md  README.md  conftest.py  pytest.ini
conformance/durability/: __init__.py  test_append_only.py  test_coverage_register.py  test_ledger_integrity.py  test_ledger_migrations_runner.py  test_ledger_schema_v3_columns.py  test_replay_determinism.py  test_replay_three_evaluations.py  test_risk_tier_governor.py  test_signed_kg_required.py
conformance/level1/: test_append_only.py  test_canary_active.py  test_determinism.py  test_ledger_integrity.py  test_no_confidence.py  test_signature_required.py  test_tag_registry.py  test_v3_envelope_shape.py  test_v3_verifier_contract.py  test_verdict_taxonomy.py
conformance/level2/: test_coverage_register.py  test_null_stale_routing.py  test_replay_determinism.py  test_window_predicates.py
conformance/provenance/: __init__.py  test_agreement_monitor.py  test_no_confidence.py  test_null_stale_routing.py  test_v3_envelope_shape.py  test_v3_verifier_contract.py  test_verdict_taxonomy.py  test_window_predicates.py
conformance/sovereignty/: __init__.py  test_air_gapped.py  test_jurisdiction_scope_captured.py  test_no_outbound_calls.py  test_signed_llm_transcript.py  test_single_worker.py  test_tamper_resistance.py
deploy/helm/ski/: Chart.yaml  values.yaml
docs/: ARCHITECTURE.md  CHANGELOG.md  CONFORMANCE.md  GETTING_STARTED.md  KNOWLEDGE_GRAPH.md  MIGRATIONS.md  architecture.md  benchmarks.md  conformance.md  contributing.md  evals.md  getting-started.md  glossary.md  governance.md  index.md  knowledge-graph.md  replay.md  specification-v3.md  threat-model.md
docs/RFCs/: 0000-template.md  0001-stateful-evaluation.md  0002-v3-neuro-symbolic-pivot.md  0003-client-sdk-and-shared-schemas.md  0003-python-sdk.md  index.md
docs/crosswalks/: eu-ai-act.md
docs/releases/: v3.0.0.md  v3.0.1.md  v3.0.2.md  v3.0.3.md  v3.1.0-alpha.1.md  v3.1.0-alpha.2.md  v3.1.0-beta.1.md
docs/tutorials/: first-rule.md
evals/: __init__.py  metrics.py  report.py  run.py  runner.py
evals-report/: evals-energy-fake-llm.json  evals-energy-fake-llm.md
evals/datasets/energy/: cases.jsonl  eval-kg.json
evals/tests/: test_evals_harness.py
examples/: README.md
examples/defense/: README.md
examples/defense/knowledge-graphs/: kg-defense-demo.json  kg-defense-sample.json  kg-defense-v3-demo.json
examples/defense/telemetry/: sample-security-incidents.jsonl
examples/energy/: README.md
examples/energy/knowledge-graphs/: kg-energy-demo.json  kg-energy-full.json  kg-energy-v3-demo.json
examples/energy/telemetry/: sample.jsonl
examples/finance/: README.md
examples/manufacturing/: README.md
reference-implementation/: .env.example  Dockerfile.milm  Dockerfile.sidecar  Dockerfile.ski-model  QUICKSTART.md  README.md  SECURITY_DEFAULTS.md  docker-compose.demo.yml  docker-compose.yml
reference-implementation/docs/: API.md  CONCURRENCY.md  CUSTOMIZATION.md  DEPLOYMENT.md  KUBERNETES.md  TROUBLESHOOTING.md
reference-implementation/migrations/: README.md  alembic.ini  env.py  script.py.mako
reference-implementation/monitoring/: kafka_jaas.conf  prometheus.yml
scripts/: .gitignore  README.md  check-verdicts.py  cleanup.sh  deploy.sh  export-kg.py  load-kg.py  make-demo-kg.py  requirements.txt  send-telemetry.py  setup.sh  test-connection.py  test-kg.py  test-verdict.py  validate-kg.py  verify-ledger.py
tools/: README.md
tools/audit-ledger/: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
tools/audit-ledger/src/audit_ledger/: __init__.py  canonical.py  cli.py  ledger.py  models.py  replay.py
tools/audit-ledger/tests/: __init__.py  test_canonical.py
tools/kg-extractor/: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
tools/kg-extractor/examples/: sample-regulation.txt
tools/kg-extractor/src/kg_extractor/: __init__.py  backends.py  cli.py  extractor.py  models.py  utils.py  v3_emitter.py
tools/kg-extractor/tests/: __init__.py  test_extractor.py
tools/kg-validator/: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
tools/kg-validator/src/kg_validator/: __init__.py  cli.py  conflict_detector.py  loader.py  models.py  utils.py  validator.py
tools/kg-validator/src/kg_validator/v3/: __init__.py  loader.py  models.py  validator.py
tools/kg-validator/tests/: __init__.py  test_predicate_parity.py  test_v3_validator.py  test_validator.py
tools/milm-deploy/: README.md  requirements.txt  setup.py
tools/ski-model-deploy/: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
tools/ski-model-deploy/src/ski_model_deploy/: __init__.py  cli.py  deployer.py  models.py  utils.py
tools/ski-model-deploy/tests/: __init__.py  test_deployer.py
tools/ski-schemas/: README.md  pyproject.toml
tools/ski-schemas/src/ski_schemas/: __init__.py  envelope.py  measurement.py  transcript.py
tools/ski-sdk/: README.md  pyproject.toml  requirements.txt
tools/ski-sdk/src/ski_sdk/: __init__.py  client.py  errors.py  models.py  verify.py
tools/ski-sdk/tests/: test_sdk_client.py  test_sdk_contract_drift.py  test_sdk_verify.py
(+94 files in other folders)
