[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "audit-ledger"
version = "3.0.3"
description = "Audit ledger management tool for the SKI Framework."
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
authors = [{ name = "KpiFinity", email = "hello@kpifinity.com" }]
keywords = ["ski-framework", "audit", "compliance", "ledger"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "psycopg[binary]==3.1.18",
    "sqlalchemy==2.0.27",
    "click==8.1.7",
    "pydantic==2.13.4",
    "python-dotenv==1.2.2",
    "jinja2==3.1.6",
    "pyyaml==6.0.1",
    "httpx==0.27.0",
    "tabulate==0.9.0",
]

[project.urls]
Homepage = "https://github.com/kpifinity/ski-framework"
Documentation = "https://kpifinity.github.io/ski-framework/"
Issues = "https://github.com/kpifinity/ski-framework/issues"

[project.scripts]
audit-ledger = "audit_ledger.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
audit_ledger = ["py.typed"]
