[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kg-validator"
version = "3.0.2"
description = "Validate and review extracted compliance rules with mandatory human expert oversight."
readme = "README.md"
requires-python = ">=3.9"
license = "Apache-2.0"
authors = [{ name = "KpiFinity", email = "hello@kpifinity.com" }]
keywords = ["ski-framework", "compliance", "knowledge-graph", "validation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Legal Industry",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "pydantic==2.13.4",
    "click==8.1.8",
    "python-dotenv==1.2.1",
    "rapidfuzz==3.13.0",
    "jinja2==3.1.6",
]

[project.urls]
Homepage = "https://github.com/kpifinity/ski-framework"
Documentation = "https://kpifinity.github.io/ski-framework/"
Issues = "https://github.com/kpifinity/ski-framework/issues"

[project.scripts]
kg-validator = "kg_validator.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
kg_validator = ["py.typed"]
