[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ski-model-deploy"
version = "3.0.2"
description = "Deploy and verify signed Knowledge Graphs against a SKI Model runtime."
readme = "README.md"
requires-python = ">=3.9"
license = "Apache-2.0"
authors = [{ name = "KpiFinity", email = "hello@kpifinity.com" }]
keywords = ["ski-framework", "compliance", "knowledge-graph", "deployment"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: System Administrators",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "click==8.1.7",
    "pydantic==2.6.3",
    "python-dotenv==1.0.1",
    "pyyaml==6.0.1",
    "jinja2==3.1.3",
    "httpx==0.27.0",
    "cryptography==42.0.5",
    "docker==7.0.0",
    "psycopg[binary]==3.1.18",
]

[project.urls]
Homepage = "https://github.com/kpifinity/ski-framework"
Documentation = "https://kpifinity.github.io/ski-framework/"
Issues = "https://github.com/kpifinity/ski-framework/issues"

[project.scripts]
ski-model-deploy = "ski_model_deploy.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
ski_model_deploy = ["py.typed"]
