[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ski-schemas"
version = "3.1.0b1"
description = "SKI Framework wire models: verdict envelope, signed LLM transcript, measurement record. One definition, no drift (RFC 0003)."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
authors = [{name = "KpiFinity Inc."}]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = ["pydantic>=2.5,<3"]

[project.urls]
Homepage = "https://github.com/kpifinity/ski-framework"
Documentation = "https://kpifinity.github.io/ski-framework/"
Issues = "https://github.com/kpifinity/ski-framework/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
ski_schemas = ["py.typed"]
